--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title></title>
+        <style>
+            img {width: 100%;}
+        </style>
     </head>
     <body>
         <img src = "map_sketch.png">
