--- a/index.html
+++ b/index.html
@@ -10,4 +10,12 @@
         <img src = "map_sketch.png">
     </body>
 
+    <script>
+    SetTimeout(refresh, 150000)
+
+    function refresh(){
+        location.reload(true)
+    }
+    </script>
+
 </html>
