--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title></title>
         <style>
-            img {width: 100%;}
+            body{margin:20;}
+            img {height:1920px; margin-top: 20px;}
         </style>
     </head>
     <body>
