--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
         <script src = "script3.js"></script>
 
-        <script>
+<!--         <script>
             SetTimeout(refresh, 150000)
         
             function refresh(){
                 location.reload(true)
             }
-        </script>
+        </script> -->
 
     </body>
 </html>
