--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HLO</title>
+        <title>AetherNY</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <style>
+
+        #container{
+            width: 100%;
+            margin: auto;
+        }
+
+            
+        #container canvas{
+            width: 100%!important;
+            height: 100%!important;
+            /* margin: auto!important; */
+        }
+
+        </style>
     </head>
     <body>
 
@@ -15,15 +30,7 @@
         <script src = "three.js-master/examples/js/loaders/GLTFLoader.js"></script>
         <script src = "three.js-master/examples/js/controls/OrbitControls.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-        <script src = "script3.js"></script>
-
-<!--         <script>
-            SetTimeout(refresh, 150000)
-        
-            function refresh(){
-                location.reload(true)
-            }
-        </script> -->
+        <script src = "script.js"></script>
 
     </body>
 </html>
