--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <script src = "three.js-master/build/three.js"></script>
         <script src = "three.js-master/examples/js/loaders/GLTFLoader.js"></script>
+        <script src = "three.js-master/examples/js/loaders/FBXLoader.js"></script>
         <script src = "three.js-master/examples/js/controls/OrbitControls.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
         <script src = "script.js"></script>
