solidfy height subdivision

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <body>
 
         <div id = "container">
+
+            <!-- Demo video in case script doens't work -->
+            <!--
+            <video width="100%" autoplay>
+            <source src="https://cdn.glitch.com/4e61cc02-40e5-4e28-901f-eb558a51a1d5%2Fmta.mov?v=1570812689597" type="video/mp4">
+            </video>
+            -->
             
         </div>
 
