--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <script src = "three.js-master/examples/js/loaders/FBXLoader.js"></script>
         <script src = "three.js-master/examples/js/controls/OrbitControls.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineLite.min.js"></script>
         <script src = "script.js"></script>
+        
 
     </body>
 </html>
